# esp-audio-libs

./: .gitignore  CMakeLists.txt  FLAC_OPTIMIZATION_IDEAS.md  README.md  idf_component.yml  library.json
.github/workflows/: publish.yml  release-drafter.yml
examples/flac_decode_benchmark/: CMakeLists.txt  README.md  baseline.json  benchmark.sh  convert_flac.py  platformio.ini  run_benchmark.py  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.esp32s3  validate_and_benchmark.py
examples/flac_decode_benchmark/optimization_reports/: 00_SUMMARY.md  03_force_inline.md  04_loop_unrolling.md  05_lpc_fixed_array.md  06_frame_sync.md  07_sample_output.md  08_preallocate_buffer.md  09_batch_metadata.md  10_metadata_array.md  11_crc_optimization.md
examples/flac_decode_benchmark/src/: CMakeLists.txt  main.cpp
include/: art_biquad.h  art_resampler.h  biquad.h  dsp.h  dsp_platform.h  flac_decoder.h  mp3_decoder.h  resampler.h  utils.h  wav_decoder.h
src/: utils.cpp
src/decode/: flac_decoder.cpp  mp3_decoder.cpp  wav_decoder.cpp
src/decode/flac/: flac_crc.cpp  flac_decoder.cpp  flac_lpc.cpp  flac_lpc.h  flac_lpc_32_asm.S  flac_lpc_64_asm.S
src/dsp/: dsps_add_s16_ansi.c  dsps_dotprod_f32_ansi.c  dsps_mulc_s16_ansi.c
src/resample/: art_biquad.c  art_resampler.cpp  biquad.c  resampler.cpp
